24 May 2012
  - JsonOverHttpRepository was renamed to UrlRepository since it can load documents from any URL, even local
  - ditto for GzippedJsonOverHttpRepository 

23 May 2012
  - starting version 2.0
  - UrlFactory now is an interface (enabling override of API version)
  - improved internal error handling

19 Nov 2011
  - version 1.2
  - improved installation 

18 Nov 2011
  - RPM package
  - simplified api key configuration (introduced FileApiKeyProvider, deprecated EnvironmnetApiKeyProvider)
  - improved test suite
  - fix: NPE on NoTranslation response
 
23 Oct 2011
  - fix: urlencoding url fragments
  - print copyright and terms of service
  - print link back to wordreference.com

14 Aug 2011
  - version 1.1
  - 2x speedup by using gzip encoding
  - bash command line script 
  - improved test coverage  

7 Aug 2011
  - version 1.0
  - API + simple command line client (as executable jar)
 