@@ -1,3 +1,6 @@
+25 May 2012
+  - wrcli --version
+
 24 May 2012
   - JsonOverHttpRepository was renamed to UrlRepository since it can load documents from any URL, even local
   - ditto for GzippedJsonOverHttpRepository 
